# OpenInstall

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOWNLOAD.md  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  blocklist.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  package_problem.yml  question.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
crates/oip-cli/: Cargo.toml
crates/oip-cli/src/: main.rs
crates/oip-cli/tests/: cli.rs
crates/oip-client/: Cargo.toml
crates/oip-client/src/: appinfo.rs  authenticode.rs  icon.rs  installer.rs  lib.rs  motw.rs  native.rs  paths.rs  pkg.rs  registry.rs  repo.rs  resolver.rs  scan.rs  settings.rs  state.rs  store.rs
crates/oip-client/tests/: download_pipeline.rs
crates/oip-core/: Cargo.toml
crates/oip-core/src/: error.rs  keys.rs  lib.rs  manifest.rs  trust.rs  verify.rs
crates/oip-core/tests/: verification.rs
crates/oip-pack/: Cargo.toml
crates/oip-pack/src/: lib.rs
docs/: architecture.md  code-signing.md  oip-format.md  openinstall-repos.md  releasing.md  signing-keys.md  smartscreen.md
fixtures/: README.md  sample.oip  testkey.key  testkey.pub
src/: lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: adversarial.rs
tests/common/: mod.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  app.css
ui/src/components/: Logo.svelte  TrustBadge.svelte
ui/src/lib/: api.js  consent.js  consent.test.js  format.js  types.js  url.js  url.test.js
ui/src/views/: Consent.svelte  CreatePackage.svelte  Launchpad.svelte  RepoConsent.svelte  Repos.svelte
