[package]
name = "oip-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenInstall client engine: URL resolution, download, the native-package verification pipeline, Mark-of-the-Web, TOFU pin store, and the single-use install-token gate. Tauri-free and unit-tested."

[lib]
name = "oip_client"
path = "src/lib.rs"

[dependencies]
oip-core = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
zip = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
pelite = { workspace = true }
mslnk = { workspace = true }

# Registry access is Windows-only; gated so the crate still type-checks elsewhere.
[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }

[dev-dependencies]
# End-to-end download->verify test: needs the test runtime, the oip-core trust
# type, oip-pack to mint a native package in-process, and a temp dir.
tokio = { workspace = true }
oip-core = { workspace = true }
oip-pack = { workspace = true }
tempfile = { workspace = true }
