[package]
name = "oip-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenInstall package (.oip) verification core: minisign publisher-signature verification, publisher-key fingerprints, and the TOFU trust model. Pure and side-effect-free."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
minisign-verify = { workspace = true }

[dev-dependencies]
# Used only by oip-core's own unit tests to mint valid signatures/keys.
minisign = { workspace = true }
