[package]
name = "oip-pack"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenInstall package authoring: build and sign native .oip packages and generate minisign keypairs. Byte-based and I/O-free so both oip-cli and the GUI can reuse it. Never signs third-party payloads with the OpenInstall release certificate and has no silent-install behavior."

[lib]
name = "oip_pack"
path = "src/lib.rs"

[dependencies]
oip-core = { workspace = true }
minisign = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zip = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
